src/test/ui/nll/borrowed-temporary-error.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowed-temporary-error.rs:22:10
   |
LL |         &(v,)
   |          ^^^^ temporary value does not live long enough
LL |         //~^ ERROR borrowed value does not live long enough [E0597]
LL |     });
   |       - temporary value only lives until here
LL |     println!("{:?}", x);
   |                      - borrow later used here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0597"
